--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>com.myinvestments</groupId>
-	<artifactId>my-investments</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	
-	<modules>
-	  <module>core</module>
-	  <module>application</module>
-	  <module>adapter</module>
-	  <module>web-api</module>
-	</modules>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.6.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+    <groupId>com.myinvestments</groupId>
+    <artifactId>my-investments</artifactId>
+    <version>0.0.1</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <!-- Modules -->
+        <core.version>0.0.1-SNAPSHOT</core.version>
+        <adapter.version>0.0.1-SNAPSHOT</adapter.version>
+        <application.version>0.0.1-SNAPSHOT</application.version>
+        <web-api.version>0.0.1-SNAPSHOT</web-api.version>
+
+        <lombok.version>1.18.4</lombok.version>
+        <junit-jupiter.version>5.6.0</junit-jupiter.version>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
+        <!-- Java -->
+        <java.version>13</java.version>
+        <jre.version>1.8</jre.version>
+    </properties>
+
+    <modules>
+        <module>core</module>
+        <module>application</module>
+        <module>adapter</module>
+        <module>web-api</module>
+    </modules>
 
 </project>
