--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <application.version>0.0.1-SNAPSHOT</application.version>
         <web-api.version>0.0.1-SNAPSHOT</web-api.version>
 
+        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <lombok.version>1.18.4</lombok.version>
         <junit-jupiter.version>5.6.0</junit-jupiter.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
